Add weather component. Adjusted PetDetails component and the PetDeatails.module.css

--- a/src/components/PetDetails.module.css
+++ b/src/components/PetDetails.module.css
@@ -1,54 +1,55 @@
-/* PetDetails.module.css
-
 .petDetails {
-    display: flex;
-    justify-content: space-around;
-    margin: 20px;
-  }
-  
-  .petImageContainer {
-    flex: 1;
-  }
-  
-  .petImage {
-    width: 100%;
-    max-height: 300px;
-    object-fit: cover;
-    border-radius: 8px;
-  }
-  
-  .petInfo {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .petName {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .petDescription {
-    margin-bottom: 20px;
-  }
-  
-  .petDetailsInfo {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-  }
-  
-  .petDetail {
-    flex: 1;
-    margin-right: 10px;
-  }
-  
-  .adoptButton {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-   */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh; /* Full height of the viewport */
+  margin: 0; /* Remove default margin on body */
+}
+
+.petImageContainer {
+  width: 100%;
+  max-width: 400px; /* Adjust as needed */
+  margin-bottom: 20px;
+}
+
+.petImage {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+
+.petInfo {
+  text-align: center;
+}
+
+.petName {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.petDescription {
+  margin-bottom: 20px;
+}
+
+.petDetailsInfo {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.petDetail {
+  flex: 1;
+  margin: 0 10px;
+}
+
+.adoptButton {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
