Add message when there is no pets for adoption

--- a/client/src/components/PetsList.module.css
+++ b/client/src/components/PetsList.module.css
@@ -3,8 +3,18 @@
     font-size: 56px;
 }
 
+.petsListContainer {
+    text-align: center;
+}
+
 .petsListCardsContainer {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.noPetsMessage {
+    font-size: 24px;
+    color: #888;
+    margin-top: 20px;
 }
