--- a/client/src/components/PetDetails.module.css
+++ b/client/src/components/PetDetails.module.css
@@ -1,55 +1,55 @@
 .petDetails {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Full height of the viewport */
-  margin: 0; /* Remove default margin on body */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: auto;
+    margin: 20px;
 }
 
 .petImageContainer {
-  width: 100%;
-  max-width: 400px; /* Adjust as needed */
-  margin-bottom: 20px;
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 20px;
 }
 
 .petImage {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
 }
 
 .petInfo {
-  text-align: center;
+    text-align: center;
 }
 
 .petName {
-  font-size: 24px;
-  margin-bottom: 10px;
+    font-size: 24px;
+    margin-bottom: 10px;
 }
 
 .petDescription {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
 
 .petDetailsInfo {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .petDetail {
-  flex: 1;
-  margin: 0 10px;
+    flex: 1;
+    margin: 0 10px;
 }
 
 .adoptButton {
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
