--- a/client/src/components/Footer.module.css
+++ b/client/src/components/Footer.module.css
@@ -6,10 +6,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  p {
+}
+
+p {
     font-size: 18px;
-    margin: 0;
-  }
-  
+    margin-bottom: 0px;
+}
