--- a/client/src/components/EditPet.module.css
+++ b/client/src/components/EditPet.module.css
@@ -20,7 +20,7 @@
 }
 
 .editPetForm button {
-    background-color: #4285f4; /* Change the color as needed */
+    background-color: #4285f4;
     color: white;
     padding: 10px 15px;
     border: none;
